# Deep-Coder

.ML-Training/: LoRA.docx
code-model-finetuning/: README.md  requirements.txt
code-model-finetuning/distil_glm5/: GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
code-model-finetuning/distil_glm5/configs/: base.yaml
code-model-finetuning/distil_glm5/distil_glm5/: judge.py  teacher_client.py
code-model-finetuning/distil_glm5/scripts/: build_prompt_pool.py  dataset_report.py  export_dataset.py  filter_and_dedup.py  generate_teacher_answers.py
code-model-finetuning/distil_glm5/src/distil_glm5/: __init__.py  config.py  filters.py  io_utils.py  judge.py  prompts.py  teacher_client.py
code-model-finetuning/distil_glm5/tests/: test_config.py  test_filters.py  test_judge.py  test_prompts.py
code-model-finetuning/notbooks/: 03_SFT_Training.ipynb  05_Evaluation_Benchmarking.ipynb
code-model-finetuning/sparse_upcycling/: dense2sparse-upcycling.md
code-model-finetuning/sparse_upcycling/sparse_upcycling/: data.py
code_model_finetuning/distil_glm5/: GETTING_STARTED.md
code_model_finetuning/distil_glm5/configs/: base.yaml
code_model_finetuning/distil_glm5/distil_glm5/: filters.py  io_utils.py  prompts.py
code_model_finetuning/distil_glm5/scripts/: build_prompt_pool.py  generate_teacher_answers.py
code_model_finetuning/distil_glm5/tests/: __init__.py  test_config.py  test_filters.py
code_model_finetuning/notbooks/: 05_Evaluation_Benchmarking.ipynb
code_model_finetuning/sparse_upcycling/: GETTING_STARTED.md
(+6 files in other folders)
